<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".Customer.activities.CustomerRegistration">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <TextView
                android:text="User Information"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="24sp"
                android:id="@+id/personal_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/fname_edt"
                android:hint="@string/first_name"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_rectangle"/>

            <EditText
                android:id="@+id/lname_edt"
                android:hint="@string/last_name"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_rectangle"/>

            <TextView
                android:text="License Information"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:textSize="24sp"
                android:id="@+id/lic_info_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/licence_number_edt"
                android:hint="@string/license_number"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_rectangle"/>

            <EditText
                android:id="@+id/address_edt"
                android:hint="@string/house_apt_and_street_name"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_rectangle"/>

            <EditText
                android:id="@+id/province_edt"
                android:hint="@string/province"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_rectangle"/>

            <EditText
                android:id="@+id/postal_code_edt"
                android:hint="@string/postal_code"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_rectangle"/>

            <EditText
                android:id="@+id/class_edt"
                android:hint="@string/license_class"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/rounded_rectangle"/>

            <EditText
                android:id="@+id/lic_exp_edt"
                android:hint="Expiry Date (MM-DD-YYYY)"
                android:textSize="20sp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:inputType="date"
                android:background="@drawable/rounded_rectangle"/>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</RelativeLayout>