<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/payment_method"
        android:gravity="start"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/payment"
        android:padding="24dp"/>

    <LinearLayout
        android:weightSum="5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/amount_to_to_br_paid_tv"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="Amount to be paid : "
            android:paddingBottom="24dp"
            android:paddingLeft="24dp"/>

        <TextView
            android:id="@+id/balance_tv"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:text="$900000"
            android:paddingBottom="24dp"
            android:paddingRight="24dp"/>

    </LinearLayout>

    <TextView
        android:id="@+id/payment_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Select one of the options"
        android:paddingBottom="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="52dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_debit"
            android:text="@string/debit"
            android:minWidth="64dp"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            android:id="@+id/btn_credit"
            android:text="@string/credit"
            android:minWidth="64dp"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            android:id="@+id/btn_cash"
            android:text="@string/cash"
            android:minWidth="64dp"
            android:layout_width="64dp"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    </LinearLayout>

</LinearLayout>