<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:id="@+id/calculation_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/car_image_iv"
        android:layout_height="200dp"
        android:layout_width="match_parent"
        android:scaleType="centerCrop"
        android:src="@mipmap/car_holder"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:padding="@dimen/activity_vertical_margin">

        <View
            android:id="@+id/DETAILS_circle"
            android:transitionName="@string/transition_name_circle_ele"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:background="@drawable/circle_shape"
            android:layout_centerVertical="true"
            android:layout_alignParentLeft="true"/>

        <TextView
            android:id="@+id/DETAILS_car_name"
            android:transitionName="@string/transition_name_car_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Not a Ferrari"
            android:layout_toRightOf="@+id/DETAILS_circle"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_centerVertical="true"
            android:textColor="#000"
            android:textSize="25sp"/>

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/DETAILS_model_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Model:"
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/DETAILS_model"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/DETAILS_model_label"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="Model Number"
                    android:textColor="#9f9f9f"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/DETAILS_booked_on_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Booked on:"
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/DETAILS_booked_on"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/DETAILS_booked_on_label"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="Some day"
                    android:textColor="#9f9f9f"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/DETAILS_booked_by_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Booked by:"
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/DETAILS_booked_by"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/DETAILS_booked_by_label"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="Mr. Robot"
                    android:textColor="#9f9f9f"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/DETAILS_return_date_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Return date:"
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/DETAILS_return_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/DETAILS_return_date_label"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="Not today"
                    android:textColor="#9f9f9f"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/DETAILS_deposit_paid_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Deposit paid:"
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/DETAILS_deposit_paid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/DETAILS_deposit_paid_label"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="A lot (30$ deposit)"
                    android:textColor="#9f9f9f"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <TextView
                    android:id="@+id/DETAILS_mileage_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Initial Mileage:"
                    android:textColor="#000"
                    android:textSize="20sp"/>

                <TextView
                    android:id="@+id/DETAILS_mileage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@+id/DETAILS_mileage_label"
                    android:layout_marginLeft="@dimen/activity_horizontal_margin"
                    android:text="Mileage"
                    android:textColor="#9f9f9f"
                    android:textSize="20sp"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin">

                <EditText
                    android:id="@+id/DETAILS_current_mileage"
                    android:inputType="numberDecimal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="#9f9f9f"
                    android:textSize="20sp"
                    android:hint="@string/current_mileage"
                    android:background="@drawable/rounded_rectangle"/>

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

</LinearLayout>